chsdi/public/GeoAdmin.ux/Swipe/css/swipe.css
/* http://www.patternify.com/ */
.olControlSwipe {
    background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAABCAYAAADn9T9+AAAAEklEQVQImWNkwAH+MzD8R+YDAB01AgCiWDp3AAAAAElFTkSuQmCC) repeat;
    display: none;
}

.olControlSwipeHover {
    cursor: w-resize;
}

.olControlSwipeLayerView {
    background-color: white;
    height: 16px;
    width: 250px;
    margin-top: 15px;
    margin-left: -260px;
    display: block;
    font-size: 11px;
    font-family: Tahoma;
    font-weight: 700;
    padding-top: 1px;
    background-image: url(../img/arrow_left.png);
    background-repeat: no-repeat;
    position: absolute;
}

.olControlSwipeLayerHide {
    display: none;
}

.olControlArrowLeft {
    width: 31px;
    height: 63px;
    margin-left: -31px;
    background-image: url(../img/bigarrow_left.png);
    background-repeat: no-repeat;
    position: absolute;
}
.olControlArrowRight {
    width: 31px;
    height: 63px;
    margin-left: 16px;
    background-image: url(../img/bigarrow_right.png);
    background-repeat: no-repeat;
    position: absolute;
}

